--- a/dataschool/_sass/_print.scss
+++ b/dataschool/_sass/_print.scss
@@ -2,13 +2,17 @@ nav.sidebar, button#sidebar-collapse, div.social-btn-group, div.chapter-followup
   display: none!important;
 }
 body {
-font: 12pt "Gentium Book Basic", Georgia, "Times New Roman", Times, serif!important;
-line-height: 1.3!important;
-max-width: 20rem;
+  font: 12pt "Gentium Book Basic", Georgia, "Times New Roman", Times, serif!important;
+  line-height: 1.3!important;
+  max-width: 40rem;
+  margin: 0 auto;
 }
 img {
   max-width: 100%!important;
 }
 h1.title {
   font-size: 2.488em!important;
+}
+article:after {
+  content: "Find more free data resources at DataSchool.com";
 }
